[gd_scene load_steps=6 format=3 uid="uid://bfq1af5py0rqe"]

[ext_resource type="Script" path="res://Scripts/BotonesMoverArchivos.gd" id="1_w7tn2"]
[ext_resource type="Texture2D" uid="uid://bxmq4qml1p7sa" path="res://Sprites/botonBorrar2 (1).png" id="4_75gjd"]
[ext_resource type="Texture2D" uid="uid://df6qc0o83384v" path="res://Sprites/botonBorrar (1).png" id="4_l5h82"]

[sub_resource type="Theme" id="Theme_p3t1i"]
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 4
MarginContainer/constants/margin_right = 4
MarginContainer/constants/margin_top = 3

[sub_resource type="Theme" id="Theme_5dt8f"]
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 4
MarginContainer/constants/margin_right = 4
MarginContainer/constants/margin_top = 4

[node name="ManejoArchivos" type="PanelContainer"]
texture_filter = 1
custom_minimum_size = Vector2(102, 72)
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_p3t1i")
script = ExtResource("1_w7tn2")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(72, 32)
layout_mode = 2
theme = SubResource("Theme_5dt8f")

[node name="BotonCopiar" type="TextureButton" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(72, 32)
layout_mode = 2

[node name="BotonCortar" type="TextureButton" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
stretch_mode = 5

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(102, 40)
layout_mode = 2

[node name="BotonPegar" type="TextureButton" parent="HBoxContainer/MarginContainer3"]
layout_mode = 2
stretch_mode = 5

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(102, 40)
layout_mode = 2

[node name="BotonBorrar" type="TextureButton" parent="HBoxContainer/MarginContainer4"]
layout_mode = 2
texture_normal = ExtResource("4_l5h82")
texture_pressed = ExtResource("4_75gjd")
stretch_mode = 5
